// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom component should map props to new name 1`] = `
<div
  className="stylix-1lntnqv"
  newColor="color"
  otherProp="foo"
/>
`;

exports[`Custom component should map props to new name 2`] = `
[
  ".stylix-1lntnqv {
  color: must be this value; }",
]
`;

exports[`Custom component should work with basic styles 1`] = `
<div
  className="stylix-ik0txt"
/>
`;

exports[`Custom component should work with basic styles 2`] = `
[
  ".stylix-ik0txt {
  color: red; }",
]
`;

exports[`Custom component should work with extended styles 1`] = `
<div
  className="stylix-10d44kw"
  otherProp="foo"
/>
`;

exports[`Custom component should work with extended styles 2`] = `
[
  ".stylix-10d44kw {
  color: onlyThis; }",
]
`;
